--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
   <body>
     <header class="main-header">
       <a href="index.html">
-        <img class="main-logo" src="images/header/logo.svg" width="140" height="70" alt="Логотип Седона">
+        <img class="main-logo" src="images/header/logo.svg" width="140" height="70" alt="Логотип Седона.">
       </a>
       <nav class="navigation">
         <ul class="navigation-list">
@@ -140,7 +140,7 @@
         <ul class="hotel-list">
           <li class="hotel-card">
             <a class="hotel-card-link" href="#">
-              <img class="hotel-card-image" src="images/hotel/hotel-1.jpg" width="300" height="212" alt="">
+              <img class="hotel-card-image" src="images/hotel/hotel-1.jpg" width="300" height="212" alt="Гостиница Amara Resort & Spa.">
             </a>
             <a class="hotel-card-link" href="#">
               <h3 class="hotel-card-title">Amara Resort & Spa</h3>
@@ -155,7 +155,7 @@
 
           <li class="hotel-card">
             <a class="hotel-card-link" href="#">
-              <img class="hotel-card-image" src="images/hotel/hotel-2.jpg" width="300" height="212" alt="">
+              <img class="hotel-card-image" src="images/hotel/hotel-2.jpg" width="300" height="212" alt="Гостиница Villas at Poco Diablo.">
             </a>
             <a class="hotel-card-link" href="#">
               <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
@@ -170,7 +170,7 @@
 
           <li class="hotel-card">
             <a class="hotel-card-link" href="#">
-              <img class="hotel-card-image" src="images/hotel/hotel-3.jpg" width="300" height="212" alt="">
+              <img class="hotel-card-image" src="images/hotel/hotel-3.jpg" width="300" height="212" alt="Гостиница Desert Quail Inn">
             </a>
             <a class="hotel-card-link" href="#">
               <h3 class="hotel-card-title">Desert Quail Inn</h3>
@@ -185,7 +185,7 @@
 
           <li class="hotel-card">
             <a class="hotel-card-link" href="#">
-              <img class="hotel-card-image" src="images/hotel/hotel-4.jpg" width="300" height="212" alt="">
+              <img class="hotel-card-image" src="images/hotel/hotel-4.jpg" width="300" height="212" alt="Гостиница GreenTree Inn">
             </a>
             <a class="hotel-card-link" href="#">
               <h3 class="hotel-card-title">GreenTree Inn</h3>
