--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header class="main-header">
       <a href="index.html">
-        <img class="main-logo" src="images/header/logo.svg" width="140" height="70" alt="Логотип Седона">
+        <img class="main-logo" src="images/header/logo.svg" width="140" height="70" alt="Логотип Седона.">
       </a>
       <nav class="navigation">
         <ul class="navigation-list">
@@ -48,7 +48,7 @@
       <h1 class="visually-hidden">Курорт "Седона"</h1>
       <section class="welcome">
         <h2 class="visually-hidden">Добро пожаловать</h2>
-        <img src="images/welcome.svg" width="458" height="352" alt="Добро пожаловать в Седону">
+        <img src="images/welcome.svg" width="458" height="352" alt="Добро пожаловать в Седону.">
         <p>Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
       </section>
       <section class="advantages">
@@ -58,7 +58,7 @@
           <li class="advantages-list-item">
             <h3>Настоящий городок</h3>
             <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-            <img src="images/town.jpg" width="800" height="385" alt="Город Седона">
+            <img src="images/town.jpg" width="800" height="385" alt="Город Седона.">
           </li>
           <li class="advantages-list-item">
             <h3>Небольшая площадь</h3>
@@ -75,7 +75,7 @@
           <li class="advantages-list-item">
             <h3>Там есть мост Дьявола</h3>
             <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-            <img src="images/grand-canyon.jpg" width="800" height="385" alt="Гранд-Каньон">
+            <img src="images/grand-canyon.jpg" width="800" height="385" alt="Гранд-Каньон.">
           </li>
         </ul>
       </section>
@@ -85,19 +85,19 @@
         <p>Опытный персонал и качественное обслуживание!</p>
         <ul class="recomendations-list">
           <li class="recomendations-list-item">
+            <img src="images/house.svg" width="75" height="72" alt="">
             <h3>Жильё</h3>
             <p>Рекомендуем пожитьв настоящем мотеле, всё как в кино!</p>
-            <img src="images/house.svg" width="75" height="72" alt="">
           </li>
           <li class="recomendations-list-item">
+            <img src="images/food.svg" width="74" height="70" alt="">
             <h3>Еда</h3>
             <p>Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
-            <img src="images/food.svg" width="74" height="70" alt="">
           </li>
           <li class="recomendations-list-item">
+            <img src="images/gift.svg" width="64" height="76" alt="">
             <h3>Сувениры</h3>
             <p>Не только китайского, но и настоящего местного производства!</p>
-            <img src="images/gift.svg" width="64" height="76" alt="">
           </li>
         </ul>
       </section>
