--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
   <body>
     <div class="page-container">
       <header class="main-header">
-        <a href="index.html">
+        <a class="main-logo-link" href="index.html">
           <img class="main-logo" src="images/header/logo.svg" width="140" height="70" alt="Логотип Седона.">
         </a>
         <nav class="navigation">
@@ -25,21 +25,22 @@
               <a class="navigation-link navigation-link-current" href="catalog.html">Гостиницы</a>
             </li>
           </ul>
-          <ul class="navigation-list navigation-user">
-            <li class="navigation-list-item">
+          <ul class="navigation-user-list">
+            <li class="navigation-user-list-item">
               <a class="navigation-link" href="#">
                 <p class="visually-hidden">Поиск</p>
                 <img src="images/header/icon-search.svg" width="18" height="18" alt="">
               </a>
             </li>
-            <li class="navigation-list-item">
+            <li class="navigation-user-list-item">
               <a class="navigation-link" href="#">
                 <p class="visually-hidden">Избранное</p>
                 <img src="images/header/icon-heart.svg" width="18" height="17" alt="">
+                <span>12</span>
               </a>
             </li>
-            <li class="navigation-list-item">
-              <a class="navigation-link button" href="#">Хочу сюда!</a>
+            <li class="navigation-user-list-item">
+              <a class="navigation-link navigation-link-button button" href="#">Хочу сюда!</a>
             </li>
           </ul>
         </nav>
