--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@
         <h1 class="visually-hidden">Курорт "Седона"</h1>
         <section class="welcome">
           <h2 class="visually-hidden">Добро пожаловать</h2>
-          <!-- <div class="welcome-wrapper"> -->
             <img class="hero-img" src="images/welcome.svg" width="458" height="352" alt="Добро пожаловать в Седону.">
-          <!-- </div> -->
         </section>
         <section class="advantages">
           <h2 class="visually-hidden">Преимущества</h2>
@@ -61,25 +59,40 @@
           <p class="advantages-second-p">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
           <ul class="advantages-list">
             <li class="advantages-list-item">
-              <h3>Настоящий городок</h3>
-              <p>Седона — не аттракцион для<br>туристов, там течёт своя<br>жизнь</p>
+              <div>
+                <h3 class="white-text">Настоящий городок</h3>
+                <div class="line"></div>
+                <p class="advantages-list-item-text white-text">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+              </div>
               <img src="images/town.jpg" width="800" height="385" alt="Город Седона.">
             </li>
             <li class="advantages-list-item">
-              <h3>Небольшая площадь</h3>
-              <p>Все достопримечательности находятся очень близко</p>
+              <div>
+                <h3>Небольшая площадь</h3>
+                <div class="line"></div>
+                <p class="advantages-list-item-text">Все достопримечательности находятся очень близко</p>
+              </div>
             </li>
             <li class="advantages-list-item">
-              <h3>Красивая дорога</h3>
-              <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+              <div>
+                <h3>Красивая дорога</h3>
+                <div class="line"></div>
+                <p class="advantages-list-item-text">Ехать в Седону из Лаc-Вегаса совсем не скучно!</p>
+              </div>
             </li>
             <li class="advantages-list-item">
-              <h3>Мало туристов</h3>
-              <p>Большинство едет в Гранд Каньон и толпится там</p>
+              <div>
+                <h3>Мало туристов</h3>
+                <div class="line"></div>
+                <p class="advantages-list-item-text">Большинство едет в Гранд Каньон и толпится там</p>
+              </div>
             </li>
             <li class="advantages-list-item">
-              <h3>Там есть мост Дьявола</h3>
-              <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+              <div>
+                <h3 class="white-text">Там есть<br> мост Дьявола</h3>
+                <div class="line"></div>
+                <p class="advantages-list-item-text white-text">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+              </div>
               <img src="images/grand-canyon.jpg" width="800" height="385" alt="Мост Дьявола.">
             </li>
           </ul>
