--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
           <p class="advantages-second-p">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
           <ul class="advantages-list">
             <li class="advantages-list-item">
-              <div>
+              <div class="advantages-list-item-wrapper">
                 <h3 class="white-text">Настоящий городок</h3>
                 <div class="line"></div>
                 <p class="advantages-list-item-text white-text">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
               </div>
-              <img src="images/town.jpg" width="800" height="385" alt="Город Седона.">
+              <img class="advantages-list-item-img" src="images/town.jpg" width="800" height="385" alt="Город Седона.">
             </li>
             <li class="advantages-list-item">
               <div>
@@ -88,7 +88,7 @@
               </div>
             </li>
             <li class="advantages-list-item">
-              <div>
+              <div class="advantages-list-item-wrapper">
                 <h3 class="white-text">Там есть<br> мост Дьявола</h3>
                 <div class="line"></div>
                 <p class="advantages-list-item-text white-text">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
@@ -103,19 +103,25 @@
           <p class="recomendations-second-p">Опытный персонал и качественное обслуживание!</p>
           <ul class="recomendations-list">
             <li class="recomendations-list-item">
-              <img src="images/house.svg" width="75" height="72" alt="дом">
-              <h3>Жильё</h3>
-              <p>Рекомендуем пожитьв настоящем мотеле, всё как в кино!</p>
+              <div class="recomendations-list-item-wrapper">
+                <img class="recomendations-list-item-img" src="images/house.svg" width="75" height="72" alt="дом">
+                <h3>Жильё</h3>
+                <p>Рекомендуем пожитьв настоящем мотеле, всё как в кино!</p>
+              </div>
             </li>
             <li class="recomendations-list-item">
-              <img src="images/food.svg" width="74" height="70" alt="бургер">
-              <h3>Еда</h3>
-              <p>Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+              <div class="recomendations-list-item-wrapper">
+                <img class="recomendations-list-item-img" src="images/food.svg" width="74" height="70" alt="бургер">
+                <h3>Еда</h3>
+                <p>Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+              </div>
             </li>
             <li class="recomendations-list-item">
-              <img src="images/gift.svg" width="64" height="76" alt="подарок">
-              <h3>Сувениры</h3>
-              <p>Не только китайского, но и настоящего местного производства!</p>
+              <div class="recomendations-list-item-wrapper">
+                <img class="recomendations-list-item-img" src="images/gift.svg" width="64" height="76" alt="подарок">
+                <h3>Сувениры</h3>
+                <p>Не только китайского, но и настоящего местного производства!</p>
+              </div>
             </li>
           </ul>
         </section>
