--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         </a>
         <nav class="navigation">
           <ul class="navigation-list">
-            <li class="navigation-list-item">
-              <a class="navigation-link navigation-link-current" href="index.html">Главная</a>
+            <li class="navigation-list-item curent-item">
+              <a class="navigation-link" href="index.html">Главная</a>
             </li>
             <li class="navigation-list-item">
               <a class="navigation-link" href="#">О Седоне</a>
@@ -29,14 +29,14 @@
             <li class="navigation-user-list-item">
               <a class="navigation-link" href="#">
                 <p class="visually-hidden">Поиск</p>
-                <img src="images/header/icon-search.svg" width="18" height="18" alt=""> <!-- Сделать псевдоэлементом  -->
+                <img src="images/header/icon-search.svg" width="18" height="18" alt="лупа">
               </a>
             </li>
             <li class="navigation-user-list-item">
               <a class="navigation-link" href="#">
                 <p class="visually-hidden">Избранное</p>
-                <img src="images/header/icon-heart.svg" width="18" height="17" alt=""> <!-- Сделать псевдоэлементом  -->
-                <span>12</span>
+                <img src="images/header/icon-heart.svg" width="18" height="17" alt="сердце">
+                <span class="favorites-number">12</span>
               </a>
             </li>
             <li class="navigation-user-list-item">
