--- a/catalog.html
+++ b/catalog.html
@@ -21,22 +21,22 @@
             <li class="navigation-list-item">
               <a class="navigation-link" href="#">О Седоне</a>
             </li>
-            <li class="navigation-list-item">
-              <a class="navigation-link navigation-link-current" href="catalog.html">Гостиницы</a>
+            <li class="navigation-list-item navigation-list-curent-item">
+              <a class="navigation-link" href="catalog.html">Гостиницы</a>
             </li>
           </ul>
           <ul class="navigation-user-list">
             <li class="navigation-user-list-item">
               <a class="navigation-link" href="#">
                 <p class="visually-hidden">Поиск</p>
-                <img src="images/header/icon-search.svg" width="18" height="18" alt="">
+                <img src="images/header/icon-search.svg" width="18" height="18" alt="лупа">
               </a>
             </li>
             <li class="navigation-user-list-item">
               <a class="navigation-link" href="#">
                 <p class="visually-hidden">Избранное</p>
-                <img src="images/header/icon-heart.svg" width="18" height="17" alt="">
-                <span>12</span>
+                <img src="images/header/icon-heart.svg" width="18" height="17" alt="сердце">
+                <span class="favorites-number">12</span>
               </a>
             </li>
             <li class="navigation-user-list-item">
