--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </a>
         <nav class="navigation">
           <ul class="navigation-list">
-            <li class="navigation-list-item curent-item">
+            <li class="navigation-list-item navigation-list-curent-item">
               <a class="navigation-link" href="index.html">Главная</a>
             </li>
             <li class="navigation-list-item">
